# Dushdo-Desktop-App

./: CONTRIBUTION.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
public/: brownnoise.aac  check.aac  click.aac  fire.aac  nature.aac  rain.aac  timetostart.aac  water.aac
src/: App.tsx  error-page.tsx  main.tsx  styles.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AddInHeader.tsx  AddTask.tsx  AddTaskForm.tsx  AddTaskFormSwitch.tsx  AppOne.tsx  CircleForTask.tsx  Counter.tsx  DeleteAllDataBtn.tsx  DeleteAllDataDialog.tsx  EditTaskForm.tsx  Header.tsx  MainData.tsx  MainFormCounter.tsx  MainNav.tsx  SaveSettingsBtn.tsx  SoundBtn.tsx  SoundPlayer.tsx  Sounds.tsx  SoundsNav.tsx  Task.tsx  TaskNav.tsx  TestForDb.tsx  TheChart.tsx  Timer.tsx  Timer2.tsx  TodayTasks.tsx
src/components/ui/: dialog.tsx  navigationmenu.tsx  scrollarea.tsx
src/lib/: createTask.ts  dalateTask.ts  db.ts  deleteAllTasks.ts  functions.ts  getAllTasks.ts  getTodayTasks.ts  readTask.ts  updateTask.ts  utils.ts
src/routes/: data.tsx  home.tsx  rout.tsx  settings.tsx  who.tsx  why.tsx
src/store/: store.ts
